export const data = {
  cnt: 3,
  list: [
    {
      coord: {
        lon: -0.13,
        lat: 51.51,
      },
      sys: {
        country: 'GB',
        timezone: 3600,
        sunrise: 1597812785,
        sunset: 1597864524,
      },
      weather: [
        {
          id: 804,
          main: 'Clouds',
          description: 'overcast clouds',
          icon: '04d',
        },
      ],
      main: {
        temp: 19.27,
        feels_like: 18.87,
        temp_min: 18.89,
        temp_max: 20,
        pressure: 1001,
        humidity: 88,
      },
      visibility: 9000,
      wind: {
        speed: 4.1,
        deg: 170,
      },
      clouds: {
        all: 100,
      },
      dt: 1597857081,
      id: 2643743,
      name: 'London',
    },
    {
      coord: {
        lon: 17.03,
        lat: 51.1,
      },
      sys: {
        country: 'PL',
        timezone: 7200,
        sunrise: 1597808724,
        sunset: 1597860349,
      },
      weather: [
        {
          id: 802,
          main: 'Clouds',
          description: 'scattered clouds',
          icon: '03d',
        },
      ],
      main: {
        temp: 22.19,
        feels_like: 22.8,
        temp_min: 21.67,
        temp_max: 22.78,
        pressure: 1010,
        humidity: 73,
      },
      visibility: 10000,
      wind: {
        speed: 2.6,
        deg: 310,
      },
      clouds: {
        all: 40,
      },
      dt: 1597857172,
      id: 3081368,
      name: 'Wrocław',
    },
    {
      coord: {
        lon: 10.45,
        lat: 54.03,
      },
      sys: {
        country: 'DE',
        timezone: 7200,
        sunrise: 1597809831,
        sunset: 1597862400,
      },
      weather: [
        {
          id: 803,
          main: 'Clouds',
          description: 'broken clouds',
          icon: '04d',
        },
      ],
      main: {
        temp: 24.42,
        feels_like: 23.8,
        temp_min: 23.33,
        temp_max: 25,
        pressure: 1009,
        humidity: 44,
      },
      visibility: 10000,
      wind: {
        speed: 1.5,
        deg: 170,
      },
      clouds: {
        all: 63,
      },
      dt: 1597857137,
      id: 2950158,
      name: 'Berlin',
    },
  ],
};
