...
      text: 'Imperial',
    },
  ];
  return (
    <View
      style={styles.container}
      accessibilityHint="Weather Screen"
      testID="Weather Screen">
      <View style={styles.btnContainer}>
        <Button onPress={openAddingMode} title="ADD A CITY" />
        <RadioButtonComponent
          data={unitsBtnsData}
          onValueChange={onUnitsChange}
          initialValue={units}
        />
      </View>
...
